[gd_scene load_steps=61 format=3 uid="uid://b3xl2512wepbf"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ir52w"]
[ext_resource type="Texture2D" uid="uid://bp6hl0n7w4d8a" path="res://assets_update/Factions/Knights/Troops/Warrior/Blue/Warrior_Blue.png" id="2_y1330"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t0s5e"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yygds"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bidh"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5l84"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_b36sm"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h6r0"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 768, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_7sq7b"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_clc5g"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlkkj"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_qut7d"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r25o"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xctnv"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 384, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmpoq"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojuvu"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts2f3"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_hljlm"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jdbn5"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1d6rq"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 1152, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtlm6"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6w2a"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv5cu"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dd4n4"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bcr4"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkwpc"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wwnhk"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv0fp"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed0pv"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_me7xh"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7l58"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g73h"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_wvxde"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_10fkb"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ocmo"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d4tb"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7fna"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_00xrp"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 0, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wohs"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ba21p"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnrk6"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_5u6xl"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_yep70"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_0paw0"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2vd7"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_451rj"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_sepub"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_llws4"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3hvl"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_v18e7"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_3trw8"]
atlas = ExtResource("2_y1330")
region = Rect2(0, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppa3n"]
atlas = ExtResource("2_y1330")
region = Rect2(192, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4y0l"]
atlas = ExtResource("2_y1330")
region = Rect2(384, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6ikn"]
atlas = ExtResource("2_y1330")
region = Rect2(576, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_nedtf"]
atlas = ExtResource("2_y1330")
region = Rect2(768, 192, 192, 192)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl0qx"]
atlas = ExtResource("2_y1330")
region = Rect2(960, 192, 192, 192)

[sub_resource type="SpriteFrames" id="SpriteFrames_t6hxi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0s5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yygds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bidh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m5l84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b36sm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h6r0")
}],
"loop": false,
"name": &"attack_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7sq7b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clc5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlkkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qut7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r25o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xctnv")
}],
"loop": false,
"name": &"attack_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmpoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojuvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts2f3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hljlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jdbn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1d6rq")
}],
"loop": false,
"name": &"attack_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtlm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6w2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv5cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dd4n4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bcr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkwpc")
}],
"loop": true,
"name": &"idle_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wwnhk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv0fp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed0pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_me7xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7l58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g73h")
}],
"loop": true,
"name": &"idle_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wvxde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10fkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ocmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d4tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7fna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00xrp")
}],
"loop": true,
"name": &"idle_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wohs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ba21p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnrk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5u6xl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yep70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0paw0")
}],
"loop": true,
"name": &"move_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2vd7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_451rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sepub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llws4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3hvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v18e7")
}],
"loop": true,
"name": &"move_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3trw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppa3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4y0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6ikn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nedtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl0qx")
}],
"loop": true,
"name": &"move_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_e7lqa"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2ic1"]
size = Vector2(35, 24.625)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iktgm"]
size = Vector2(34, 27)

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_ir52w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_t6hxi")
animation = &"attack_up"
autoplay = "idle_down"
offset = Vector2(0, -33)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_e7lqa")

[node name="player_hitbox" type="Area2D" parent="."]

[node name="up" type="CollisionShape2D" parent="player_hitbox"]
position = Vector2(-0.5, -14.6875)
shape = SubResource("RectangleShape2D_o2ic1")

[node name="right" type="CollisionShape2D" parent="player_hitbox"]
visible = false
position = Vector2(9, -9.5)
shape = SubResource("RectangleShape2D_iktgm")

[node name="left" type="CollisionShape2D" parent="player_hitbox"]
visible = false
position = Vector2(-8, -10)
shape = SubResource("RectangleShape2D_iktgm")

[node name="down" type="CollisionShape2D" parent="player_hitbox"]
visible = false
position = Vector2(2, 2.5)
shape = SubResource("RectangleShape2D_iktgm")

[node name="just_hit_timer" type="Timer" parent="."]
one_shot = true

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="just_hit_timer" to="." method="_on_just_hit_timer_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
